--- a/labcodes/lab1/Makefile
+++ b/labcodes/lab1/Makefile
@@ -225,6 +225,8 @@ debug-nox: $(UCOREIMG)
 	$(V)$(QEMU) -S -s -serial mon:stdio -hda $< -nographic &
 	$(V)sleep 2
 	$(V)$(TERMINAL) -e "gdb -q -x tools/gdbinit"
+debug-nogdb:$(UCOREIMG)
+	$(V)$(QEMU) -S -s -parallel stdio -hda $< -serial null
 
 .PHONY: grade touch
 
